[package]
name = "axicontraves"
version = "0.1.0"
edition = "2021"

[lib]
name = "axicontraves"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
rand = "0.8"
num_cpus = "1.16"