[build-system]
requires = ["poetry-core>=1.0.0", "maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.poetry]
name = "axicontraves"
version = "0.1.0"
description = "High-performance batch LLM request processor"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "axicontraves" }
]
keywords = ["llm", "openai", "anthropic", "rust", "pyo3", "extension-module"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = ">=3.10"
rich = "^13.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
maturin = "^1.0.0"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "axicontraves.axicontraves"
python-source = "."
strip = true
